test/language/errors/errors_set.hm
# assignment error: expected array or table but was string

use "errors"

try { "foo"[2] = 0 } except e { echo runtime(e) }
